允许前端检索geoembed

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1740,6 +1740,7 @@
   "purchase_server_title": "Server",
   "purchase_settings_server_activated": "The server product key is managed by the admin",
   "query_asset_id": "Query Asset ID",
+  "query_geoembed_asset_id": "Query Geo-embed Asset ID",
   "queue_status": "Queuing {count}/{total}",
   "rate_asset": "Rate Asset",
   "rating": "Star rating",
