--- a/i18n/zh_SIMPLIFIED.json
+++ b/i18n/zh_SIMPLIFIED.json
@@ -1666,6 +1666,7 @@
   "purchase_server_title": "服务器",
   "purchase_settings_server_activated": "服务器产品密钥正在由管理员管理",
   "query_asset_id": "查询资产ID",
+  "query_geoembed_asset_id": "空间相似度查询",
   "queue_status": "排队中 {count}/{total}",
   "rating": "星级",
   "rating_clear": "删除星级",
